[KOA-4704]Fix tertiary label wrapping when using hanzi (Chinese characters) (#2238)

--- a/packages/bpk-component-autosuggest/src/BpkAutosuggest.module.scss
+++ b/packages/bpk-component-autosuggest/src/BpkAutosuggest.module.scss
@@ -135,6 +135,7 @@
     &-tertiary-label {
       display: table-cell;
       vertical-align: top;
+      word-break: keep-all;
 
       @include bpk-text;
       @include bpk-text--xs;
